<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="hint_height"><font size="16">Height (cm)</font></string>
    <string name="hint_weight"><font size="16">Weight (kg)</font></string>
    <string name="hint_male"><font size="14">Male</font></string>
    <string name="hint_female"><font size="14">Female</font></string>
    <string name="name">Name</string>
</resources>